crates/toml_edit/tests/fixtures/invalid/key-after-table.stderr
TOML parse error at line 1, column 9
  |
1 | [error] this = "should not be here"
  |         ^
Unexpected `t`
Expected newline or end of input
While parsing a Table Header
